# Pyrex-web-wallet

./: .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md
config/: config.json
html/: index.html
html/css_2/: moncrypt.webflow.css
html/js/: config.js
html/js/controllers/: send_coins.js  version.js
html/js/lib/: mymonero-core.js  mypyrexcoin-core.js  mypyrexcoin-core.js.map
html/js/lib/Pyrex-core-js/monero_utils/: MyMoneroCoreCpp_WASM.wasm
html/modals/: idle-timeout.html  idle-warning.html  import-wallet.html  imported-account.html  login.html  review-account-details.html  review-login-key.html  transfer-confirm.html
html/partials/: account-balance.html  account-overview.html  account-transactions.html  create-your-account.html  home.html  receive-coins.html  send-coins.html  support.html
html/pyrexStyle/: pyrexStyle.css
sql/: openmonero.sql
src/: CMakeLists.txt  CmdLineOptions.cpp  OutputInputIdentification.cpp  RPCCalls.cpp  YourMoneroRequests.cpp  monero_headers.h  rpccalls.cpp
tests/: CMakeLists.txt
tests/res/: config_ill_formed.json
